# LLM_ollama

./: README.md  assistant.py  assistant_mysql.py  pyproject.toml
