[tool.poetry]
name = "llm-ollama"
version = "0.1.0"
description = "Running Local LLMs"
authors = ["Ramy-Abdallah_PURO <Ramy.Abdallah@Purolator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "3.1.19"
colorama = "0.4.6"
chromadb = ">=0.4.22"
tqdm = "4.66.4"
ollama = "0.2.1"
mysql-connector-python = "^9.2.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
